Popup: input tag alignment has been fixed
input text alignment in popup has been fixed
DCM-1111

--- a/src/themes/tizen/common/jquery.mobile.tizen.popup.less
+++ b/src/themes/tizen/common/jquery.mobile.tizen.popup.less
@@ -76,11 +76,14 @@
 		background: @color_popup_text_bg;
 		text-align: center;
 
-	.ui-li .ui-radio, .ui-li .ui-checkbox {
-		label {
-			background : transparent;
+		.ui-li .ui-radio, .ui-li .ui-checkbox {
+			label {
+				background : transparent;
+			}
 		}
-	}
+		input {
+			 display : inline-block;
+		}
 	}
 
 	.ui-popup-button-bg {
